<resources>
    <string name="app_name">Trợ lý ảo Zalo</string>
    <string name="action_read_noti_settings">Read Notificaiton Settings</string>
    <string name="action_draw_overlay_settings">Draw Overlays Settings</string>
    <string name="action_accessibility_settings">Accessibility Settings</string>
    <string name="accessibility_service_description">Accessibility Settings is required</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip_please_change">Bỏ qua: xin / đổi</string>
    <string name="skip_7_seats">Bỏ qua: 7 chỗ</string>
    <string name="enable_quick_reply_button">Bật nút trả lời nhanh</string>
    <string name="enable_accessibility_service">Bật trợ năng quick_reply</string>
    <string name="disable_accessibility_service">Tắt trợ năng quick_reply</string>
    <string name="zla_close">Đóng</string>
    <string name="zla_error_title">Ối</string>
    <string name="zla_error_message">Đã xảy ra lỗi. Vui lòng thử lại sau.</string>
    <string name="zla_loading">Đang tải, vui lòng đợi…</string>
    <string name="zla_network_error_message">Không có kết nối Internet. Vui lòng kiểm tra kết nối của bạn và thử lại.</string>
    <string name="zla_splash_title">Trợ lý ảo %s</string>
    <string name="zla_splash_title_param_1">Zalo</string>
    <string name="zla_splash_message">Dành cho Tài xế xe dịch vụ</string>
    <string name="zla_register_title">Chào mừng bạn!</string>
    <string name="zla_register_message">Đăng ký tài khoản mới</string>
    <string name="zla_full_name">Họ và tên</string>
    <string name="zla_phone_number">Số điện thoại</string>
    <string name="zla_password">Mật khẩu</string>
    <string name="zla_register_tnc">Tôi đồng ý với %s</string>
    <string name="zla_register_tnc_param_1">Điều kiện &amp; điều khoản</string>
    <string name="zla_register_login">Bạn đã có tài khoản? %s</string>
    <string name="zla_login">Đăng nhập</string>
    <string name="zla_continue">Tiếp tục</string>
    <string name="zla_full_name_error">Họ và tên %s</string>
    <string name="zla_invalid">không hợp lệ</string>
    <string name="zla_phone_number_error">Số điện thoại %s</string>
    <string name="zla_password_rule">Có ít nhất %s, bao gồm %s và %s</string>
    <string name="zla_password_rule_param_1">8 ký tự</string>
    <string name="zla_password_rule_param_2">chữ cái</string>
    <string name="zla_password_rule_param_3">số</string>
    <string name="zla_otp_title">Nhập mã OTP</string>
    <string name="zla_otp_message">Hãy nhập %s để hoàn tất đăng ký.</string>
    <string name="zla_otp_message_param_1">mã OTP đã gửi đến điện thoại</string>
    <string name="zla_otp_resend_after">Gửi lại mã sau %ds</string>
    <string name="zla_otp_resend">Gửi lại mã</string>
    <string name="zla_otp_wrong">Sai mã xác nhận</string>
    <string name="zla_otp_resending">Đang gửi lại mã</string>
    <string name="zla_verifying">Đang xác nhận</string>
    <string name="zla_forgot_password">Quên mật khẩu?</string>
    <string name="zla_register">Đăng ký</string>
    <string name="zla_login_message">Đăng nhập vào tài khoản của bạn</string>
    <string name="zla_input_phone_number">Nhập số điện thoại</string>
    <string name="zla_input_password">Nhập mật khẩu</string>
    <string name="zla_skip_login">Bỏ qua đăng nhập</string>
    <string name="zla_forgot_password_title">Quên Mật Khẩu</string>
    <string name="zla_please_input_info">Vui lòng nhập thông tin</string>
    <string name="zla_next">Tiếp</string>
    <string name="zla_login_register">Bạn chưa có tài khoản? %s</string>
    <string name="zla_change_password_title">Nhập mật khẩu mới</string>
    <string name="zla_change_password_message">Vui lòng nhập mật khẩu mới</string>
    <string name="zla_re_enter_pasword">Nhập lại mật khẩu</string>
    <string name="zla_confirm">Xác nhận</string>
    <string name="zla_register_success_title">Đăng ký thành công!</string>
    <string name="zla_register_success_message">Đã tạo tài khoản cho bạn</string>
    <string name="zla_grant_permissions_title">Cấp quyền ứng dụng</string>
    <string name="zla_grant_permissions_message">Để ứng dụng Driva có thể thực hiện các chức năng nâng cao như Trả lời nhanh hoặc Tự động nhận cuốc thì cần cấp quyền</string>
    <string name="zla_grant_permissions_yes">Đồng ý cấp quyền</string>
    <string name="zla_no">Không</string>
    <string name="zla_grant_notification_access">Cho phép ứng dụng truy cập thông báo</string>
    <string name="zla_yes">Đồng ý</string>
    <string name="zla_cancel">Hủy bỏ</string>
    <string name="zla_grant_permissions_with_steps">Cấp quyền ứng dụng (%d/%d)</string>
    <string name="zla_turn_on_accessibility_service">Bật dịch vụ Hỗ trợ tiếp cận</string>
    <string name="zla_allow_display_over_other_apps">Cho phép ứng dụng hiển thị nội dung lên trên cùng của các ứng dụng khác</string>
    <string name="zla_ok">OK</string>
    <string name="zla_on">Bật</string>
    <string name="zla_off">Tắt</string>
    <string name="zla_skip_message_please_change">Bỏ qua tin nhắn Xin, Đổi</string>
</resources>