<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.quick_reply.presentation.ui.main.MainActivity">
    <item
        android:id="@+id/action_read_noti_settings"
        android:orderInCategory="100"
        android:title="@string/action_read_noti_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_draw_overlay_settings"
        android:orderInCategory="101"
        android:title="@string/action_draw_overlay_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_accessibility_settings"
        android:orderInCategory="102"
        android:title="@string/action_accessibility_settings"
        app:showAsAction="never" />
</menu>