<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.quick_reply.presentation.ui.register.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tvLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/zla_ic_register" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/T32B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/zla_register_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivIcon" />

                <TextView
                    android:id="@+id/tvMessage"
                    style="@style/T14N"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zla_register_message"
                    android:textColor="@color/zla_secondary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <com.example.quick_reply.presentation.widget.edittext.CommonEditText
                    android:id="@+id/edtFullName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:drawableStart="@drawable/zla_ic_profile"
                    android:hint="@string/zla_full_name"
                    android:text="@={viewModel.fullName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMessage" />

                <com.example.quick_reply.presentation.widget.edittext.CommonEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:drawableStart="@drawable/zla_ic_phone"
                    android:hint="@string/zla_phone_number"
                    android:inputType="phone"
                    android:text="@={viewModel.phoneNumber}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtFullName" />

                <com.example.quick_reply.presentation.widget.edittext.CommonEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:drawableStart="@drawable/zla_ic_lock"
                    android:drawableEnd="@drawable/zla_ic_eye_open"
                    android:hint="@string/zla_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbTnc"
                    style="@style/T14N"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword"
                    tools:text="@string/zla_register_tnc" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnContinue"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_marginTop="24dp"
                    android:enabled="@{viewModel.isValid}"
                    android:text="@string/zla_continue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cbTnc" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/tvLogin"
            style="@style/T14N"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingVertical="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/zla_register_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>