<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/T32B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/zla_register_success_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/T14N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zla_register_success_message"
            android:textColor="@color/zla_secondary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btnYes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMessage">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/zla_im_register_success" />

                <TextView
                    android:id="@+id/tvGrantPermissionsTitle"
                    style="@style/T24N"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp"
                    android:text="@string/zla_grant_permissions_title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivImage" />

                <TextView
                    android:id="@+id/tvGrantPermissionsMessage"
                    style="@style/T16N"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:gravity="center_horizontal"
                    android:text="@string/zla_grant_permissions_message"
                    android:textColor="@color/zla_secondary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGrantPermissionsTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.example.quick_reply.presentation.widget.button.CommonButton
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/zla_grant_permissions_yes"
            app:layout_constraintBottom_toTopOf="@id/tvNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvNo"
            style="@style/T18N"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/zla_fg_ripple"
            android:gravity="center"
            android:text="@string/zla_no"
            android:textColor="@color/zla_secondary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>