<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_launcher" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/T32M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/zla_splash_title_1"
                android:textStyle="bold" />

            <TextView
                style="@style/T16M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/zla_splash_message"
                android:textColor="#FF171A1F" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/indeterminateBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="96dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/zla_primary_button"
                android:indeterminateTintMode="src_atop" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                style="@style/T14M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/zla_loading"
                android:textColor="#FF171A1F" />

        </LinearLayout>

    </LinearLayout>

</layout>