<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.quick_reply.presentation.ui.forgotpassword.ForgotPasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/zla_ic_arrow_left" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tvRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/zla_ic_register" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/T32B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/zla_forgot_password_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivIcon" />

                <TextView
                    android:id="@+id/tvMessage"
                    style="@style/T14N"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zla_please_input_info"
                    android:textColor="@color/zla_secondary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <com.example.quick_reply.presentation.widget.edittext.CommonEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:drawableStart="@drawable/zla_ic_phone"
                    android:hint="@string/zla_input_phone_number"
                    android:inputType="phone"
                    android:text="@={viewModel.phoneNumber}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMessage" />

                <com.example.quick_reply.presentation.widget.button.CommonButton
                    android:id="@+id/btnContinue"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/zla_common_button_height"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="34dp"
                    android:backgroundTint="@color/zla_forgot_password_button_background_tint"
                    android:text="@string/zla_next"
                    android:textColor="@color/zla_forgot_password_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/tvRegister"
            style="@style/T14N"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingVertical="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/zla_login_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>